compiler/testData/diagnostics/testsWithUnsignedTypes/wrongLongSuffixForULong.kt
val a1 = 1u<!WRONG_LONG_SUFFIX!>l<!>
val a2 = 0x1u<!WRONG_LONG_SUFFIX!>l<!>
val a3 = 0B1u<!WRONG_LONG_SUFFIX!>l<!>
val a4 = 1U<!WRONG_LONG_SUFFIX!>l<!>
